<resources>
    <string name="app_name">KinoFilms</string>
    <string name="catalog">Каталог</string>
    <string name="recommendations">Рекомендации</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="title">Title</string>
    <string name="movies">Фильмы</string>
    <string name="serials">Сериалы</string>
    <string name="cartoons">Мультфильмы</string>
    <string name="marvel">Marvel</string>
    <string name="dc">DC</string>
    <string name="name_movie">Название фильма</string>
    <string name="alternative_name_movie">Альтернативное название фильма</string>
    <string name="default_rating">0.0</string>
    <string name="default_release_year">0000</string>
    <string name="kinopoisk">КиноПоиск</string>
    <string name="imdb">IMDB</string>
    <string name="tmdb">TMDB</string>
    <string name="genre_movie">Жанр фильма</string>
    <string name="country">Страна</string>
    <string name="duration">Продолжительность</string>
    <string name="director">Режиссер</string>
    <string name="name_director">Имя режиссера</string>
    <string name="premiere_in_world">Премьера в мире:</string>
    <string name="premiere_in_russia">Премьера в России:</string>
    <string name="date_premiere_in_world">Дата премьеры в мире</string>
    <string name="date_premiere_in_russia">Дата премьеры в России</string>
    <string name="description">Описание</string>
    <string name="trailers">Трейлеры</string>
    <string name="sequels_and_prequels">Сиквелы и приквелы</string>
    <string name="actors">Актеры</string>
    <string name="voice_actors">Актеры дубляжа</string>
    <string name="name_person">Имя персоны</string>
    <string name="en_name_person">Name person</string>
    <string name="film_crew">Съемочная группа</string>
    <string name="default_count">00</string>
    <string name="favorites_movies">Избранные фильмы</string>
    <string name="favorites_serials">Избранные сериалы</string>
    <string name="favorites_cartoons">Избранные мультфильмы</string>
    <string name="settings">Настройки</string>
    <string name="version_app">Версия приложения:</string>
    <string name="filter_by_popularity">По популярности</string>
    <string name="filter_by_release_date">По дате выхода</string>
    <string name="filter_by_rating">По рейтингу</string>
    <string name="support">Поддержка: denis.klishevich@gmail.com</string>
    <string name="popular_foreign_movies">Популярные зарубежные фильмы</string>
    <string name="popular_foreign_serials">Популярные зарубежные сериалы</string>
    <string name="popular_russian_movies">Популярные российские фильмы</string>
    <string name="popular_russian_serials">Популярные российские сериалы</string>
    <string name="popular_cartoons">Популярные мультфильмы</string>
    <string name="profession_actor">actor</string>
    <string name="profession_voice_actor">voice_actor</string>
    <string name="birthday">Дата рождения</string>
    <string name="growth">Рост</string>
    <string name="age">Возраст</string>
    <string name="years">лет</string>
    <string name="career">Карьера</string>
    <string name="professions">Профессии</string>
    <string name="birth_place">Место рождения</string>
    <string name="death">Дата смерти</string>
    <string name="death_place">Место смерти</string>
    <string name="dash">—</string>
    <string name="en_profession">Profession</string>
    <string name="type_movie">movie</string>
    <string name="type_tv_series">tv-series</string>
    <string name="type_cartoon">cartoon</string>
    <string name="more_detailed">Подробнее</string>
    <string name="facts">Знаете ли вы, что…</string>
    <string name="fact_value">Текст факта</string>
    <string name="filmography">Фильмография</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
</resources>