<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_video_library_24"
        android:title="@string/catalog" />

    <item
        android:id="@+id/recommendations_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_subscriptions_24"
        android:title="@string/recommendations" />

    <item
        android:id="@+id/search_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/profile_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:title="@string/profile" />

</menu>