<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/color_app_fragment">

    <ImageView
        android:id="@+id/image_actor"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_100"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_text_unchecked"
        android:scaleType="fitXY"
        android:src="@drawable/kinofilms_logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_actor"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/image_arrow_right"
        app:layout_constraintStart_toEndOf="@+id/image_actor"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/name_person" />

    <TextView
        android:id="@+id/en_name_actor"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_2"
        android:textColor="@color/color_text_unchecked"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@id/image_arrow_right"
        app:layout_constraintStart_toEndOf="@+id/image_actor"
        app:layout_constraintTop_toBottomOf="@id/name_actor"
        tools:text="@string/en_name_person" />

    <TextView
        android:id="@+id/en_profession"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_arrow_right"
        app:layout_constraintStart_toEndOf="@+id/image_actor"
        tools:text="@string/en_profession" />

    <ImageView
        android:id="@+id/image_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_5"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_app_blue" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_text_unchecked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_actor" />

</androidx.constraintlayout.widget.ConstraintLayout>